<resources>
    <string-array name="exercise_details">
        <item>Date</item>
        <item>Time</item>
        <item>Duration</item>
        <item>Distance</item>
        <item>Calories</item>
        <item>Heart Rate</item>
        <item>Comment</item>
    </string-array>
    <string-array name="system_unit_type">
        <item>"Metric (Kilometers)"</item>
        <item>"Imperial (Miles)"</item>
    </string-array>
    <string-array name="input_type_array">
        <item>Manual Entry</item>
        <item>GPS</item>
        <item>Automatic</item>
    </string-array>

    <string-array name="activity_type_array">
        <item>Running</item>
        <item>Walking</item>
        <item>Standing</item>
        <item>Cycling</item>
        <item>Hiking</item>
        <item>Downhill Skiing</item>
        <item>Cross-Country Skiing</item>
        <item>Snowboarding</item>
        <item>Skating</item>
        <item>Swimming</item>
        <item>Mountain Biking</item>
        <item>Wheelchar</item>
        <item>Elliptical</item>
        <item>Other</item>
    </string-array>

    <string name="alert_dialog_unit_preferred">Units preferred</string>
    <string name="alert_dialog_comment">Comment</string>
    <string name="alert_dialog_duration">Duration</string>
    <string name="alert_dialog_distance">Distance</string>
    <string name="alert_dialog_calories">Calories</string>
    <string name="alert_dialog_heart_rate">Heart Rate</string>
    <string name="app_name">MyRuns</string>
    <string name="user_profile_photo">Profile Photo:</string>
    <string name="button_profile_photo_change">Retake</string>
    <string name="button_profile_photo_filename">profile_photo.png</string>
    <string name="user_name">User</string>
    <string name="user_name_ph">Your Name</string>
    <string name="user_email">Email</string>
    <string name="user_email_ph">Your Email</string>
    <string name="user_phone">Phone</string>
    <string name="user_phone_ph">Your Phone Number</string>

    <string name="user_gender">Gender</string>
    <string name="radio_button_male">Male</string>
    <string name="radio_button_female">Female</string>

    <string name="user_class">Class</string>
    <string name="user_class_ph">e.g. 2016</string>
    <string name="user_major">Major</string>
    <string name="user_major_ph">Your Major</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="profile_saved_text">Profile Saved</string>

    <string-array name="ui_profile_photo_picker_items">
        <item>Take picture from camera</item>
        <item>Pick from Gallery</item>
    </string-array>

    <string name="dialog_fragment_tag_photo_picker">dialog_fragment_tag_photo_picker</string>
    <string name="ui_profile_photo_picker_title">Select your profile picture</string>
    <string name="title_activity_map_exercise">Map</string>
    <string name="title_activity_map_exercise_entry">MapExerciseEntryActivity</string>
</resources>
