<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="me.ziyuanliu.myruns.MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_profile_photo"/>
                <ImageView
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:id="@+id/profileImageView"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="59dp"
                    android:layout_marginStart="59dp"
                    android:layout_weight="18.57" />
                <Button
                    android:onClick="retakePhoto"
                    android:text="@string/button_profile_photo_change"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>
            </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_name"/>
        <EditText
            android:singleLine="true"
            android:hint="@string/user_name_ph"
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_email"/>
        <EditText
            android:singleLine="true"
            android:hint="@string/user_email_ph"
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_phone"/>
        <EditText
            android:singleLine="true"
            android:inputType="phone"
            android:id="@+id/phoneEditText"
            android:hint="@string/user_phone_ph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_gender"/>
            <RadioGroup
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:id="@+id/genderRadioGroup"
                android:layout_height="wrap_content">

                <RadioButton
                    android:text="@string/radio_button_male"
                    android:layout_weight="1"
                    android:id="@+id/maleRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:layout_weight="1"
                    android:text="@string/radio_button_female"
                    android:id="@+id/femaleRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_class"/>
        <EditText
            android:singleLine="true"
            android:inputType="number"
            android:hint="@string/user_class_ph"
            android:id="@+id/classEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_major"/>

        <EditText
            android:singleLine="true"
            android:hint="@string/user_major_ph"
            android:id="@+id/majorEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:onClick="saveProfile"
                android:text="@string/button_save"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <Button
                android:onClick="cancelChanges"
                android:layout_weight="1"
                android:text="@string/button_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        </LinearLayout>


    </ScrollView>

</RelativeLayout>
